--- a/app/app.component.css
+++ b/app/app.component.css
@@ -1,4 +1,5 @@
-:host {
-  padding-top: 5rem;
-  background-color: red;
+.container {
+  margin-top: 5rem;
+  border: 1px solid blue;
+  padding: 10px;
 }
