--- a/app/app.component.less
+++ b/app/app.component.less
@@ -1,4 +1,5 @@
-:host {  // Because this is the top-level component, this pseduo-class is actually setting styles on the body tag
-	padding-top: 5rem;
-	background-color: red;
+.container {
+	margin-top: 5rem;
+	border: 1px solid blue;
+	padding: 10px;
 }
