--- a/app/admin/admin.component.html
+++ b/app/admin/admin.component.html
@@ -1,1 +1,6 @@
-<h1>Admin</h1>
+<h3>Home</h3>
+<ul>
+	<li><a routerLink="/admin/users">Manage Users</a></li>
+</ul>
+<router-outlet></router-outlet>
+
