--- a/app/admin/user-editor/user-editor.component.html
+++ b/app/admin/user-editor/user-editor.component.html
@@ -1,2 +1,17 @@
 <h3>Edit User</h3>
 Id: {{id}}
+<form (submit)="saveUser()">
+	<div class="form-group">
+		<label>First Name</label>
+		<input type="text" class="form-control" name="firstName" [(ngModel)]="editUser.firstName">
+	</div>
+	<div class="form-group">
+		<label>Last Name</label>
+		<input type="text" class="form-control" name="lastName" [(ngModel)]="editUser.lastName">
+	</div>
+	
+</form>
+
+<hr>
+
+<pre>{{editUser | json}}</pre>
