--- a/app/admin/user-editor/user-editor.component.html
+++ b/app/admin/user-editor/user-editor.component.html
@@ -1,17 +1,14 @@
 <h3>Edit User</h3>
 Id: {{id}}
-<form (submit)="saveUser()">
+
+<form (submit)="saveUser()" *ngIf="user">
 	<div class="form-group">
 		<label>First Name</label>
-		<input type="text" class="form-control" name="firstName" [(ngModel)]="editUser.firstName">
+		<input type="text" class="form-control" name="firstName" [(ngModel)]="user.firstName">
 	</div>
 	<div class="form-group">
 		<label>Last Name</label>
-		<input type="text" class="form-control" name="lastName" [(ngModel)]="editUser.lastName">
+		<input type="text" class="form-control" name="lastName" [(ngModel)]="user.lastName">
 	</div>
 	
 </form>
-
-<hr>
-
-<pre>{{editUser | json}}</pre>
