--- a/app/core/nav-bar/nav-bar.component.html
+++ b/app/core/nav-bar/nav-bar.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
-	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+	<button class="navbar-toggler navbar-toggler-right" type="button" (click)="toggleCollapse()">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<a class="navbar-brand" routerLink="/">GroovyTask</a>
 	
-	<div class="collapse navbar-collapse" id="navbarsExampleDefault">
+	<div class="collapse navbar-collapse" id="navbarsExampleDefault" [ngbCollapse]="isCollapsed">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item active">
 				<a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
