--- a/app/core/nav-bar/nav-bar.component.html
+++ b/app/core/nav-bar/nav-bar.component.html
@@ -7,10 +7,10 @@
 	<div class="collapse navbar-collapse" id="navbarsExampleDefault" [ngbCollapse]="isCollapsed">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item" routerLink="/calendar" routerLinkActive="active">
-				<a class="nav-link">Calendar</a>
+				<a class="nav-link" routerLink="/calendar">Calendar</a>
 			</li>
 			<li class="nav-item" routerLink="/admin" routerLinkActive="active">
-				<a class="nav-link">Admin</a>
+				<a class="nav-link" routerLink="/admin">Admin</a>
 			</li>
 			<!--<li class="nav-item">
 				<a class="nav-link disabled" href="#">Disabled</a>
