--- a/app/admin/user-editor/user-editor.component.html
+++ b/app/admin/user-editor/user-editor.component.html
@@ -1,14 +1,28 @@
-<h3>Edit User</h3>
-Id: {{id}}
+<loading-message [waitFor]="user" [message]="'Loading User Editor'"></loading-message>
 
-<form (submit)="saveUser()" *ngIf="user">
-	<div class="form-group">
-		<label>First Name</label>
-		<input type="text" class="form-control" name="firstName" [(ngModel)]="user.firstName">
-	</div>
-	<div class="form-group">
-		<label>Last Name</label>
-		<input type="text" class="form-control" name="lastName" [(ngModel)]="user.lastName">
-	</div>
+<div *ngIf="user">
+	<h3><span *ngIf="user.$key">Edit</span><span *ngIf="!user.$key">Create</span> User</h3>
+	<form (submit)="saveUser()">
+		<div class="form-group">
+			<label>First Name</label>
+			<input type="text" class="form-control" name="firstName" [(ngModel)]="user.firstName">
+		</div>
+		<div class="form-group">
+			<label>Last Name</label>
+			<input type="text" class="form-control" name="lastName" [(ngModel)]="user.lastName">
+		</div>
+		<div class="form-group">
+			<label>Username</label>
+			<input type="text" class="form-control" name="username" [(ngModel)]="user.username">
+		</div>
+		<div class="form-group">
+			<label>Admin</label>
+			<input type="checkbox" class="form-check" name="admin" [(ngModel)]="user.admin">
+		</div>
+		<button type="submit" class="btn btn-primary">Save</button>
+		<button type="button" class="btn btn-default" (click)="cancelEdit()">Cancel</button>
 	
-</form>
+	</form>
+</div>
+
+
