--- a/app/core/nav-bar/nav-bar.component.html
+++ b/app/core/nav-bar/nav-bar.component.html
@@ -6,13 +6,13 @@
 	
 	<div class="collapse navbar-collapse" id="navbarsExampleDefault" [ngbCollapse]="isCollapsed">
 		<ul class="navbar-nav mr-auto">
-			<li class="nav-item" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+			<li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
 				<a class="nav-link" routerLink="/">Home</a>
 			</li>
-			<li class="nav-item" routerLink="/calendar" routerLinkActive="active">
+			<li class="nav-item" routerLinkActive="active">
 				<a class="nav-link" routerLink="/calendar">Calendar</a>
 			</li>
-			<li class="nav-item" routerLink="/admin" routerLinkActive="active">
+			<li class="nav-item" routerLinkActive="active">
 				<a class="nav-link" routerLink="/admin">Admin</a>
 			</li>
 			<!--<li class="nav-item">
