--- a/app/core/home/home.component.html
+++ b/app/core/home/home.component.html
@@ -2,10 +2,10 @@
 	<h1>Home</h1>
 	<a routerLink="/login">Log In!</a>
 	
-	<button type="button" (click)="login()">Login</button>
+	<!--<button type="button" (click)="login()">Login</button>
 	<button type="button" (click)="logout()">Logout</button>
 	
-	<div>uid:  <!--{{ (af.auth | async)?.uid }}--> </div>
+	<div>uid:  &lt;!&ndash;{{ (af.auth | async)?.uid }}&ndash;&gt; </div>-->
 	<!--<pre>
 		{{info | json}}
 	</pre>-->
