--- a/app/core/nav-bar/nav-bar.component.html
+++ b/app/core/nav-bar/nav-bar.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
-	<button class="navbar-toggler navbar-toggler-right" type="button" (click)="toggleCollapse()">
+	<button class="navbar-toggler navbar-toggler-right" type="button" (click)="toggleCollapse()" *ngIf="loggedIn">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<a class="navbar-brand" routerLink="/">GroovyTask</a>
 	
-	<div class="collapse navbar-collapse" id="navbarsExampleDefault" [ngbCollapse]="isCollapsed">
+	<div class="collapse navbar-collapse" id="navbarsExampleDefault" [ngbCollapse]="isCollapsed" *ngIf="loggedIn">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
 				<a class="nav-link" (click)="collapseNav()" routerLink="/">Home</a>
