Cleaned up comments, added todo list to home page

--- a/app/core/home/home.component.html
+++ b/app/core/home/home.component.html
@@ -1,12 +1,9 @@
 <div class="container">
 	<h1>Home</h1>
-	<a routerLink="/login">Log In!</a>
-	
-	<!--<button type="button" (click)="login()">Login</button>
-	<button type="button" (click)="logout()">Logout</button>
-	
-	<div>uid:  &lt;!&ndash;{{ (af.auth | async)?.uid }}&ndash;&gt; </div>-->
-	<!--<pre>
-		{{info | json}}
-	</pre>-->
+	Next Steps:
+	<ul>
+		<li>Register with Email and Password</li>
+		<li>Create User Account upon registration and/or login with social provider</li>
+		<li>User Rights - lock down admin route for non-admin users</li>
+	</ul>
 </div>
