--- a/app/core/home/home.component.html
+++ b/app/core/home/home.component.html
@@ -2,8 +2,9 @@
 	<h1>Home</h1>
 	Next Steps:
 	<ul>
-		<li>Register with Email and Password</li>
-		<li>Create User Account upon registration and/or login with social provider</li>
+		<li class="done">Register with Email and Password</li>
+		<li>Create User Account <span class="done">upon registration</span> and/or login with social provider</li>
+		<li>On Login, get User Profile info and persist to a variable in UserService (make sure this updates and doesn't habe to be an observable or anything)</li>
 		<li>User Rights - lock down admin route for non-admin users</li>
 	</ul>
 </div>
