--- a/app/core/login/login.component.html
+++ b/app/core/login/login.component.html
@@ -1,6 +1,6 @@
 ﻿<div class="col-md-6 col-md-offset-3">
     <h2>Login</h2>
-    <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
+    <form name="form" (ngSubmit)="f.form.valid && loginWithEmail()" #f="ngForm" novalidate>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
             <label for="username">Email</label>
             <input type="text" class="form-control" name="username" [(ngModel)]="model.username" #username="ngModel" required id="username" />
