--- a/app/core/home/home.component.html
+++ b/app/core/home/home.component.html
@@ -6,6 +6,10 @@
 		<li>Handle Errors in login</li>
 		<li>Create User Account <span class="done">upon registration</span> and/or login with social provider</li>
 		<li>On Login, get User Profile info and persist to a variable in UserService (make sure this updates and doesn't habe to be an observable or anything)</li>
-		<li>User Rights - lock down admin route for non-admin users</li>
+		<li>Useraa Rights - lock down admin route for non-admin users</li>
 	</ol>
+	<pre>currentUser:
+{{currentUser | json}}
+</pre>
 </div>
+
