--- a/app/admin/user-detail/user-detail.component.html
+++ b/app/admin/user-detail/user-detail.component.html
@@ -4,7 +4,7 @@
 	<button type="button" class="btn btn-outline-default btn-sm pull-right" (click)="editUser()"><i class="fa fa-pencil"></i> Edit</button>
 	<h4>User Detail</h4>
 	<div>{{user.firstName}} {{user.lastName}} <span *ngIf="user.admin">[ADMIN]</span></div>
-	<div><i>{{user.username}}</i></div>
+	<div><i>{{user.email}}</i></div>
 	
 	<pre>{{user | json}}</pre>
 </div>
