--- a/app/admin/user-editor/user-editor.component.html
+++ b/app/admin/user-editor/user-editor.component.html
@@ -12,8 +12,8 @@
 			<input type="text" class="form-control" name="lastName" [(ngModel)]="user.lastName">
 		</div>
 		<div class="form-group">
-			<label>Username</label>
-			<input type="text" class="form-control" name="username" [(ngModel)]="user.username">
+			<label>Email</label>
+			<input type="text" class="form-control" name="email" [(ngModel)]="user.email">
 		</div>
 		<div class="form-group">
 			<label>Admin</label>
