Added photos to user manager in admin

--- a/app/admin/admin.component.html
+++ b/app/admin/admin.component.html
@@ -1,4 +1,4 @@
-<h3>Home</h3>
+<h3>Admin</h3>
 <ul class="nav nav-pills">
 	<li class="nav-item" *ngFor="let route of routeInfo"><a class="nav-link" routerLinkActive="active" routerLink="{{route.path}}">{{route.name}}</a></li>
 </ul>
