--- a/app/core/reset-request/reset-request.component.html
+++ b/app/core/reset-request/reset-request.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-6 col-md-offset-3">
 	<h2>Password Reset</h2>
-	<form name="form" (ngSubmit)="f.form.valid && resetPassword(model)" #f="ngForm" novalidate>
+	<form name="form" (ngSubmit)="f.form.valid && requestReset(model)" #f="ngForm" novalidate>
 		
 		<div class="form-group" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
 			<label for="email">Email</label>
