- Enabled production mode dynamically based on hostname - Updated User model - Starting to work on linking accounts - Starting to do a quick test to see what we can do for print page num ers - Working "My Profile" link

--- a/app/admin/user-editor/user-editor.component.html
+++ b/app/admin/user-editor/user-editor.component.html
@@ -1,6 +1,8 @@
 <loading-message [waitFor]="user" [message]="'Loading User Editor'"></loading-message>
 
 <div *ngIf="user">
+	<button class="btn btn-default" *ngIf="showLinkButton()" (click)="toggleLinkOptions()" [class.active]="showLinkOptions">Link Social Media Accounts</button>
+	<link-account *ngIf="showLinkOptions"></link-account>
 	<h3><span *ngIf="user.$key">Edit</span><span *ngIf="!user.$key">Create</span> User</h3>
 	<form (submit)="saveUser()">
 		<div class="form-group">
