--- a/app/core/nav-bar/nav-bar.component.html
+++ b/app/core/nav-bar/nav-bar.component.html
@@ -15,6 +15,9 @@
 			<li class="nav-item" routerLinkActive="active">
 				<a class="nav-link" (click)="collapseNav()" routerLink="/admin">Admin</a>
 			</li>
+			<li class="nav-item" routerLinkActive="active">
+				<a class="nav-link" routerLink="{{getProfileLink()}}" (click)="collapseNav()">My Profile</a>
+			</li>
 			<li class="nav-item">
 				<a class="nav-link" (click)="logout()">Log Out</a>
 			</li>
