--- a/app/core/nav-bar/nav-bar.component.html
+++ b/app/core/nav-bar/nav-bar.component.html
@@ -15,8 +15,11 @@
 			<li class="nav-item" routerLinkActive="active">
 				<a class="nav-link" (click)="collapseNav()" routerLink="/admin">Admin</a>
 			</li>
+			<!--<li class="nav-item" routerLinkActive="active">
+				<a class="nav-link" (click)="collapseNav()" routerLink="/print-test">Print Test</a>
+			</li>-->
 			<li class="nav-item" routerLinkActive="active">
-				<a class="nav-link" routerLink="{{getProfileLink()}}" (click)="collapseNav()">My Profile</a>
+				<a class="nav-link" routerLink="/profile/{{getProfileLink()}}" (click)="collapseNav()">My Profile</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" (click)="logout()">Log Out</a>
